syntax = "proto3";

package settings;

option go_package = "github.com/liukai/next-ai-agent-user-backend/gateway/internal/pb/settings";

import "common.proto";

service SettingsService {
  // Workspace-level settings
  rpc GetWorkspaceSettings(WorkspaceRequest) returns (WorkspaceSettings);
  rpc UpdateWorkspaceSettings(UpdateWorkspaceSettingsRequest) returns (WorkspaceSettings);

  // AI Providers
  rpc ListProviders(WorkspaceRequest) returns (ListProvidersResponse);
  rpc CreateProvider(CreateProviderRequest) returns (Provider);
  rpc UpdateProvider(UpdateProviderRequest) returns (Provider);
  rpc DeleteProvider(ResourceRequest) returns (common.Empty);
  rpc TestProvider(TestProviderRequest) returns (TestProviderResponse);

  // AI Models
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse);
  rpc ListModelSeries(ListModelsRequest) returns (ListModelSeriesResponse);
  rpc ListModelCatalog(ListModelsRequest) returns (ListModelSeriesResponse);
  rpc CreateModel(CreateModelRequest) returns (Model);
  rpc UpdateModel(UpdateModelRequest) returns (Model);
  rpc DeleteModel(ResourceRequest) returns (common.Empty);
  rpc ListAllModels(WorkspaceRequest) returns (ListModelsResponse);

  // API Keys
  rpc ListApiKeys(WorkspaceRequest) returns (ListApiKeysResponse);
  rpc CreateApiKey(CreateApiKeyRequest) returns (CreateApiKeyResponse);
  rpc DeleteApiKey(ResourceRequest) returns (common.Empty);
}

message WorkspaceSettings {
  string id = 1;
  string name = 2;
  string description = 3;
  string default_model = 4;
  double default_temperature = 5;
  int32 max_tokens_per_request = 6;
  repeated string assistant_model_ids = 7;
  repeated string fallback_model_ids = 8;
  repeated string code_model_ids = 9;
  repeated string agent_model_ids = 10;
  repeated string sub_agent_model_ids = 11;
}

message UpdateWorkspaceSettingsRequest {
  string workspace_id = 1;
  common.UserContext user_context = 2;

  string name = 3;
  string description = 4;
  string default_model = 5;
  double default_temperature = 6;
  int32 max_tokens_per_request = 7;

  repeated string assistant_model_ids = 8;
  repeated string fallback_model_ids = 9;
  repeated string code_model_ids = 10;
  repeated string agent_model_ids = 11;
  repeated string sub_agent_model_ids = 12;

  bool set_name = 13;
  bool set_description = 14;
  bool set_default_model = 15;
  bool set_default_temperature = 16;
  bool set_max_tokens_per_request = 17;
  bool set_assistant_model_ids = 18;
  bool set_fallback_model_ids = 19;
  bool set_code_model_ids = 20;
  bool set_agent_model_ids = 21;
  bool set_sub_agent_model_ids = 22;
}

message WorkspaceRequest {
  string workspace_id = 1;
  common.UserContext user_context = 2;
}

message ResourceRequest {
  string id = 1;
  string workspace_id = 2;
  common.UserContext user_context = 3;
}

message Provider {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  string type = 4;
  string base_url = 5;
  string status = 6;
  string created_at = 7;
}

message ListProvidersResponse {
  repeated Provider providers = 1;
}

message CreateProviderRequest {
  string workspace_id = 1;
  string name = 2;
  string type = 3;
  string api_key = 4;
  string base_url = 5;
  common.UserContext user_context = 6;
}

message UpdateProviderRequest {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  string api_key = 4;
  string base_url = 5;
  string status = 6;
  common.UserContext user_context = 7;
}

message Model {
  string id = 1;
  string provider_id = 2;
  string name = 3;
  int32 context_window = 4;
  double cost_per_1k_tokens = 5;
  bool is_default = 6;
}

message ListModelsRequest {
  string provider_id = 1;
  string workspace_id = 2;
  common.UserContext user_context = 3;
}

message ListModelsResponse {
  repeated Model models = 1;
}

message UIModel {
  string id = 1;
  string name = 2;
  string display_name = 3;
  int32 context_window = 4;
  int32 max_output = 5;
  double input_price = 6;
  double output_price = 7;
  repeated string capabilities = 8;
  bool enabled = 9;
}

message ModelSeries {
  string id = 1;
  string name = 2;
  repeated UIModel models = 3;
}

message ListModelSeriesResponse {
  repeated ModelSeries series = 1;
}

message CreateModelRequest {
  string provider_id = 1;
  string workspace_id = 2;
  string name = 3;
  int32 context_window = 4;
  double cost_per_1k_tokens = 5;
  bool is_default = 6;
  common.UserContext user_context = 7;
}

message UpdateModelRequest {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  int32 context_window = 4;
  double cost_per_1k_tokens = 5;
  bool is_default = 6;
  common.UserContext user_context = 7;
}

message ApiKey {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  string key_prefix = 4;
  string expires_at = 5;
  string created_at = 6;
}

message ListApiKeysResponse {
  repeated ApiKey api_keys = 1;
}

message CreateApiKeyRequest {
  string workspace_id = 1;
  string name = 2;
  string expires_at = 3;
  common.UserContext user_context = 4;
}

message CreateApiKeyResponse {
  ApiKey api_key = 1;
  string raw_key = 2;
}

message TestProviderRequest {
  string id = 1;
  string workspace_id = 2;
  common.UserContext user_context = 3;
}

message TestProviderResponse {
  bool success = 1;
  string message = 2;
}
